src/test/ui/parser/mismatched-delim-brace-empty-block.stderr
error: unexpected closing delimiter: `}`
  --> $DIR/mismatched-delim-brace-empty-block.rs:5:1
   |
LL | fn main() {
   |           - this opening brace...
LL |
LL | }
   | - ...matches this closing brace
LL |     let _ = ();
LL | }
   | ^ unexpected closing delimiter

error: expected item, found keyword `let`
  --> $DIR/mismatched-delim-brace-empty-block.rs:4:5
   |
LL |     let _ = ();
   |     ^^^ expected item

error: aborting due to 2 previous errors

